--- a/gb/21/4/28/n12911149.md
+++ b/gb/21/4/28/n12911149.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/efqihy3582/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/efqihy3582/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/efqihy3582/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/efqihy3582/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/efqihy3582/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/efqihy3582/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/efqihy3582/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>走进非洲（4）塞伦盖蒂的动物乐园</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911176-20210428_africa_helen_chou_401-600x400.jpg" />
 <h6>斑马的乐园 - 塞伦盖蒂国家公园一角（Serengeti National Park）。（图片/周海伦提供）
 </h6>
 <hr>
-	<p>接上文：<ahref=><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/19/n12889592.md#1">走进非洲（3）非洲农家乐与塞伦盖蒂野生动物</a></p>
+	<p>接上文：<ahref=><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/19/n12889592.md#1">走进非洲（3）非洲农家乐与塞伦盖蒂野生动物</a></p>
 <p>人品爆表的我们心满意足的离开了正在吃大餐的狮子们，往公园深处开去。今晚我们就住在公园内。有没有可能与狮子们隔墙而眠？我还真不知道哎！</p>
-<figure id="attachment_12911175" aria-describedby="caption-attachment-12911175" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911175-20210428_africa_helen_chou_402.jpg"><img class="size-medium wp-image-12911175" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911175-20210428_africa_helen_chou_402-450x587.jpg" alt="行行摄摄看世界, 非洲" width="450" b="587" /></a><figcaption id="caption-attachment-12911175" class="wp-caption-text"><ahref="https://github.com/efqihy3582/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2.md#1">非洲</a>民乐。（图片/周海伦提供）</figcaption></figure>
-<p>一进渡假村就听到一阵节奏欢快的<ahref="https://github.com/efqihy3582/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2.md#1">非洲</a>打击乐，让人情不自禁的跟着鼓点舞动。</p>
+<figure id="attachment_12911175" aria-describedby="caption-attachment-12911175" style="width: 342px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911175-20210428_africa_helen_chou_402.jpg"><img class=" wp-image-12911175" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911175-20210428_africa_helen_chou_402-450x587.jpg" alt="行行摄摄看世界, 非洲" width="342" b="446" /></a><figcaption id="caption-attachment-12911175" class="wp-caption-text"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2.md#1">非洲</a>民乐。（图片/周海伦提供）</figcaption></figure>
+<p>一进渡假村就听到一阵节奏欢快的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2.md#1">非洲</a>打击乐，让人情不自禁的跟着鼓点舞动。</p>
 <figure id="attachment_12911174" aria-describedby="caption-attachment-12911174" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911174-20210428_africa_helen_chou_403.jpg"><img class=" wp-image-12911174" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911174-20210428_africa_helen_chou_403-450x320.jpg" alt="行行摄摄看世界, 非洲" width="600" b="427" /></a><figcaption id="caption-attachment-12911174" class="wp-caption-text">渡假村内的小楼。（图片/周海伦提供）</figcaption></figure>
 <p>我一眼就爱上了这些茅草顶的房子。小楼周边风景漂亮，颇有身处野外之感。但房间里面却又整洁温馨，风格地道。</p>
 <figure id="attachment_12911173" aria-describedby="caption-attachment-12911173" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911173-20210428_africa_helen_chou_404.jpg"><img class="size-medium wp-image-12911173" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911173-20210428_africa_helen_chou_404-450x600.jpg" alt="行行摄摄看世界, 非洲" width="450" b="600" /></a><figcaption id="caption-attachment-12911173" class="wp-caption-text">渡假村的客房。（图片/周海伦提供）</figcaption></figure>
@@ -19,7 +19,7 @@
 <p>太阳要落山了，我也不敢跑远，就在小楼前等待。寂静中仔细听了听，好像没有狮子吼。其实，在非洲最可怕的不是庞大的狮子大象，而是极毒的绿色曼巴蛇(green mamba)和小小的蚊子。在非洲可以说是谈“蚊”色变，因为它会传播疟疾。我们到非洲前打了不少防疫针，如黄热、伤寒、乙肝什么的，而在路上每天要吃的就是防疟疾的药。该药副作用极大，但不吃又不行。我们一行四人每个人的药性反应都不一样。每天早餐时分享各自的反应成了我们旅途中的一个有趣的话题。</p>
 <figure id="attachment_12911171" aria-describedby="caption-attachment-12911171" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911171-20210428_africa_helen_chou_406.jpg"><img class=" wp-image-12911171" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911171-20210428_africa_helen_chou_406-450x337.jpg" alt="行行摄摄看世界，非洲" width="601" b="450" /></a><figcaption id="caption-attachment-12911171" class="wp-caption-text">织布鸟(Weaver bird)。（图片/周海伦提供）</figcaption></figure>
 <p>早上出门才发现小楼旁有个织布鸟的杰作。其实它们不织布，而是雄鸟为了取悦雌鸟而编织的精致鸟巢：美女快看，哥哥我有漂亮的豪宅哦！嫁给我吧！嫁给我吧！</p>
-<figure id="attachment_12911169" aria-describedby="caption-attachment-12911169" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911169-20210428_africa_helen_chou_407.jpg"><img class="size-medium wp-image-12911169" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911169-20210428_africa_helen_chou_407-450x706.jpg" alt="行行摄摄看世界, 非洲" width="450" b="706" /></a><figcaption id="caption-attachment-12911169" class="wp-caption-text">路边卖萌的长颈鹿。（图片/周海伦提供）</figcaption></figure>
+<figure id="attachment_12911169" aria-describedby="caption-attachment-12911169" style="width: 362px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911169-20210428_africa_helen_chou_407.jpg"><img class=" wp-image-12911169" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911169-20210428_africa_helen_chou_407-450x706.jpg" alt="行行摄摄看世界, 非洲" width="362" b="568" /></a><figcaption id="caption-attachment-12911169" class="wp-caption-text">路边卖萌的长颈鹿。（图片/周海伦提供）</figcaption></figure>
 <p>这头长颈鹿正在树下吃早饭，看到我们的车就慢慢的踱过来，忽闪着长睫毛大眼睛，滴着口水卖萌。</p>
 <figure id="attachment_12911168" aria-describedby="caption-attachment-12911168" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911168-20210428_africa_helen_chou_408.jpg"><img class=" wp-image-12911168" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911168-20210428_africa_helen_chou_408-450x300.jpg" alt="行行摄摄看世界, 非洲" width="600" b="400" /></a><figcaption id="caption-attachment-12911168" class="wp-caption-text">南非大羚羊(Topi antelope)。（图片/周海伦提供）</figcaption></figure>
 <p>躲在灌木丛中吃早饭的南非大羚羊一看到我们，就迈着四方步像走T台似的走到空地当中，一个优雅转头亮相：我美吧！我脸长不？我大长腿上的袖套别致吧！</p>
@@ -29,8 +29,8 @@
 <p>你看，连这么小的幼仔都两眼冒凶光。</p>
 <figure id="attachment_12911164" aria-describedby="caption-attachment-12911164" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911164-20210428_africa_helen_chou_411.jpg"><img class="size-medium wp-image-12911164" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911164-20210428_africa_helen_chou_411-450x562.jpg" alt="行行摄摄看世界, 非洲" width="450" b="562" /></a><figcaption id="caption-attachment-12911164" class="wp-caption-text">獴(Mangoose)。（图片/周海伦提供）</figcaption></figure>
 <p>这个也凶狠，名字叫獴。你别看它个子小小的，专吃蛇。还毒不死，最多昏过去睡一觉，30分钟后满血复活。</p>
-<figure id="attachment_12911163" aria-describedby="caption-attachment-12911163" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911163-20210428_africa_helen_chou_412.jpg"><img class=" wp-image-12911163" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911163-20210428_africa_helen_chou_412-450x197.jpg" alt="行行摄摄看世界, 非洲" width="601" b="263" /></a><figcaption id="caption-attachment-12911163" class="wp-caption-text"><ahref="https://github.com/efqihy3582/djy/blob/master/gb/tag/%E6%96%91%E9%A9%AC.md#1">斑马</a>的乐园。（图片/周海伦提供）</figcaption></figure>
-<p>在非洲一年只有两季：雨季与旱季。三月初的塞伦盖蒂是<ahref="https://github.com/efqihy3582/djy/blob/master/gb/tag/%E6%96%91%E9%A9%AC.md#1">斑马</a>与角马的乐园。这些食草动物像割草机一样，一片片绿地在它们的嘴下消失。每年到了6、7月，坦桑尼亚大草原的青草被它们割完，一场地球上最壮观的动物大迁徙就会上演。数百万的动物大军长途跋涉三千多公里，碾过茫茫大草原，从塞伦盖蒂公园南部迁徙至肯尼亚境内的马赛马拉野生动物保护区。</p>
+<figure id="attachment_12911163" aria-describedby="caption-attachment-12911163" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911163-20210428_africa_helen_chou_412.jpg"><img class=" wp-image-12911163" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911163-20210428_africa_helen_chou_412-450x197.jpg" alt="行行摄摄看世界, 非洲" width="601" b="263" /></a><figcaption id="caption-attachment-12911163" class="wp-caption-text"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%91%E9%A9%AC.md#1">斑马</a>的乐园。（图片/周海伦提供）</figcaption></figure>
+<p>在非洲一年只有两季：雨季与旱季。三月初的塞伦盖蒂是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%91%E9%A9%AC.md#1">斑马</a>与角马的乐园。这些食草动物像割草机一样，一片片绿地在它们的嘴下消失。每年到了6、7月，坦桑尼亚大草原的青草被它们割完，一场地球上最壮观的动物大迁徙就会上演。数百万的动物大军长途跋涉三千多公里，碾过茫茫大草原，从塞伦盖蒂公园南部迁徙至肯尼亚境内的马赛马拉野生动物保护区。</p>
 <p>途中，它们不仅要躲过狮子与豹的埋伏，还要拼命逃过张着大嘴聚集在马拉河两岸的鳄鱼。好不容易到了终点，短短2、3个月又要为了食物返回塞伦盖蒂。这一趟来回，只有半数不到的幸运者能回到出发地。而跟着它们一起回来的，是近50万头在惊险旅途中诞生的新生命。</p>
 <p>这也是动物界的一个轮回。</p>
 <figure id="attachment_12911162" aria-describedby="caption-attachment-12911162" style="width: 596px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12911162-20210428_africa_helen_chou_413.jpg"><img class=" wp-image-12911162" src="https://i.epochtimes.com/assets/uploads/2021/04/id12911162-20210428_africa_helen_chou_413-450x228.jpg" alt="行行摄摄看世界, 非洲" width="596" b="302" /></a><figcaption id="caption-attachment-12911162" class="wp-caption-text">斑马的乐园。（图片/周海伦提供）</figcaption></figure>
@@ -47,9 +47,9 @@
 <p>我离它们多近？一伸手就能摸摸头的距离。</p>
 <p>怕不怕？真心觉得不怕。我问过司机：万一它们跳起来扑人怎么办？司机说一般不会。真惹着它们了也会先发出口头警告，不会一言不合就开打。司机们都熟悉它们的习性，一听声音不对马上就会叫大家跳上车开走。</p>
 <p>大约有二千六百多头狮子生活在塞伦盖蒂，这里是它们的家。而我们人类不远万里闯入它们的领地，只能坐在移动的笼子（车子）里才能近距离观察它们。不知到底是我们看动物还是送上门让动物看我们？无论如何，真要和平相处，双方都得遵守游戏规则，互相尊重，保持社交距离，才能相安无事。＠*</p>
-<h3><span style="color: #008000;">??<a style="color: #008000;" href=><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/13/n12876643.md#1">走进非洲（2）作客野生动物家园</a></span><br />
-<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/6/n12861186.md#1">走进非洲（1）作客野生动物家园</a></span><br />
-<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/1/31/n12723421.md#1">印度男子开车环游世界 11个月访问59国</a></span></h3>
+<h3><span style="color: #008000;">??<a style="color: #008000;" href=><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/13/n12876643.md#1">走进非洲（2）作客野生动物家园</a></span><br />
+<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/6/n12861186.md#1">走进非洲（1）作客野生动物家园</a></span><br />
+<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/31/n12723421.md#1">印度男子开车环游世界 11个月访问59国</a></span></h3>
 <p>责任编辑：茉莉</p>
 <p>&nbsp;</p>
 	
@@ -57,41 +57,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/16/1/25/n4625474.md#1">组图：非洲的后花园─纳马夸兰</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/16/2/3/n4632010.md#1">非洲发现新狮群 给动物保护带来喜讯</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/19/n12890228.md#1">出发啰！在美国骑自行车必知10项安全规则</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/19/n12889592.md#1">走进非洲（3）非洲农家乐与塞伦盖蒂野生动物</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/25/n4625474.md#1">组图：非洲的后花园─纳马夸兰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/3/n4632010.md#1">非洲发现新狮群 给动物保护带来喜讯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/20/n13660131.md#1">较往年平均早4天 日本宣布东京樱花季开始</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/15/n13647153.md#1">神秘的利比亚沙漠玻璃 颜色亮眼浑然天成</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616592.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004515.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/23/n12900792.md#1">不丹小王子前世曾为中国僧人</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/27/n12909414.md#1">【新闻看点】习一脸愁容风传 5大事态预示不祥？</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/27/n12907315.md#1">【珍言真语】麦燕庭：打压新闻自由 香港推向专制</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/27/n12909690.md#1">【横河观点】中共病毒大流行 当局早有预测？</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12906360.md#1">只因这句话？赵婷奥斯卡领奖 中共封杀</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12906329.md#1">【新闻大家谈】武毒所新线索“美军传毒”破解</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12905099.md#1">奥斯卡揭晓 赵婷《游牧人生》获最佳导演等三奖</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12905001.md#1">尹汝贞摘奥斯卡最佳女配角 谦逊感言获满堂彩</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12906690.md#1">港星林芊妤怀孕期间打疫苗 流产后坦言后悔</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/27/n12907501.md#1">李光洙车祸后难兼顾健康 5月底退出《RM》</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/26/n12905773.md#1">几百万人抢看的惊奇短片：海鸥骑海鸥</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/24/n12902272.md#1">8种适合种在菜园的花 好看好吃还能驱虫</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/27/n12907753.md#1">河北马路上出现狂奔的鸵鸟 时速超过40公里</a></li>
-<li><a href="https://github.com/efqihy3582/djy/blob/master/gb/21/4/23/n12899777.md#1">食物发霉切掉再吃？4种情况别食用 当心伤肝致癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/efqihy3582/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/efqihy3582/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/28/n12911149.htm">走进非洲（4）塞伦盖蒂的动物乐园</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/28/n12911149.htm">走进非洲（4）塞伦盖蒂的动物乐园</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/efqihy3582/djy/blob/master/gb/21/4/28/n12911149.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/efqihy3582/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/efqihy3582/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/efqihy3582/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/efqihy3582/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/efqihy3582/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/4/28/n12911149.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
